@@ -178,7 +178,7 @@ class NodeTableModel extends AbstractTableModel {
                     if ((o != null) && o instanceof Integer) {
                         sort.put(new Double(((Integer) o).doubleValue()), Integer.valueOf(ia));
                     } else {
-                        sort.put(new Double(ia + 0.1), new Integer(ia));
+                        sort.put(new Double(ia + 0.1), Integer.valueOf(ia));
                     }
                 } else {
                     allPropertyColumns[ia].setVisibleIndex(-1);
@@ -208,10 +208,10 @@ class NodeTableModel extends AbstractTableModel {
         propertyColumns = new int[visibleCount];
 
         int j = 0;
-        Iterator it = sort.values().iterator();
+        Iterator<Integer> it = sort.values().iterator();
 
         while (it.hasNext()) {
-            i = ((Integer) it.next()).intValue();
+            i = it.next().intValue();
             allPropertyColumns[i].setVisibleIndex(j);
             propertyColumns[j] = i;
             j++;
@@ -831,7 +831,7 @@ class NodeTableModel extends AbstractTableModel {
          * @param visibleIndex New value of property visibleIndex.
          */
         public void setVisibleIndex(int visibleIndex) {
-            property.setValue(ATTR_ORDER_NUMBER, new Integer(visibleIndex));
+            property.setValue(ATTR_ORDER_NUMBER, Integer.valueOf(visibleIndex));
         }
     }
 }
